--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="reg_info"><u>How does this work?</u></string>
 
+    <string name="placeholder_string">Placeholder##</string>
+
 </resources>
